# teko-lang

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISION_LOG.md  GOVERNANCE.md  INSTALL.md  LICENSE  LICENSE-MIT  NOTES.md  PITCH.md  PRIVACY.md  README.md  REBOOT_PLAN.md  SECURITY.md  SUPPORT.md  TECH_DEBT_BACKLOG.md  TEKO_CHECKER.md  TEKO_COMPILER_MEMORANDUM.txt  TEKO_CONSTITUTION.md  TEKO_CORRECTION_PLAN.md  TEKO_EVOLUTION_DESIGN.md  TEKO_EVOLUTION_JUSTIFICATION.md  TEKO_HISTORY.md  TEKO_LEGISLATION.md  TEKO_MASTER_PLAN.md  TEKO_ROADMAP_BINARY.md  TEKO_ROADMAP_CLOUD_NATIVE.md  TEKO_ROADMAP_COMPTIME_DERIVE.md  TEKO_ROADMAP_DB.md  TEKO_ROADMAP_DEVTOOLS.md  TEKO_ROADMAP_E7_V1.md  TEKO_ROADMAP_E7_V2.md  TEKO_ROADMAP_INDEPENDENCE.md  TEKO_ROADMAP_MATH.md  TEKO_ROADMAP_NATIVE_BACKEND.md  (+13 more)
.claude/agents/: teko-architect.md  teko-canonicalizer.md  teko-developer.md  teko-docs.md  teko-implementer.md  teko-reviewer.md  teko-scout.md  teko-tech-lead.md  teko-verifier.md
.gen2/: teko  teko.tsym
.gen3/: teko.Info.plist
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  lsan-suppressions.txt  sast-baseline.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  coverage.yml  mirror-pr-to-org.yml  native.yml  release.yml  sanitizers.yml  sast.yml  seed-linux-fork.yml  tag-on-version-bump.yml  tests.yml  wasm.yml
.seed/: teko
docs/: BACKEND_AOT_PLAN.md  BUILDING.md  HANDOFF_NATIVE_RUNNER_AND_CRYPTO_SURFACE.md  HANDOFF_PHASE14.md  HANDOFF_PHASE15B.md  HANDOFF_PHASE15CD.md  ORCHESTRATION_DOCTRINE.md  PHASE10_WASM_CONCURRENCY.md  PHASE12_FRONTEND_GRAMMAR.md  PHASE13_NATIVE_CRYPTO.md  PHASE14_ADVANCED_CONCURRENCY.md  PHASE15_OOP.md  PHASE16_CASTING.md  PHASE17_FLOATING_POINT.md  PHASE18E_ARRAYS_COLLECTIONS_SIMD.md  PHASE18_OPTIONALS_COMPTIME.md  PHASE19_NETWORKING.md  PHASE19_TLS_TRACK.md  PHASE_BROWSER_FFI.md  plan.md  vm_plan.md
docs/brand/: README.md  mascot.ansi
docs/design/: al-wave-crumbs.md  al-wave-emit-throughput.md  al1-proof-report.md  al4a-interning-design.md  backend-443-rpo-numbering.md  backend-a1-lir-lowering.md  backend-a2-isel-arm64.md  backend-a3-regalloc.md  backend-a4-encoder.md  backend-b1-x8664.md  backend-b2-riscv64.md  backend-b3-windows-coff.md  backend-c1-wasm.md  backend-default-inversion.md  backend-e4-cross-compile.md  backend-wasm.md  backlog-drain-master-plan.md  build-observability-plan.md  checker-build-vs-lint-analysis.md  ci-gates.md  compile-time-architecture.md  comptime-fold-design.md  const-crumb8-preseed-subsequence.md  const-module-level-plan.md  const-tb1-design.md  const-tb2-design.md  const-tb3-design.md  const-tb4-design.md  const-tb5-design.md  const-tb6-design.md  coverage-gate.md  coverage-matrix-max-hybrid.html  d2-differential-retire-dwarf.md  drain-254-L4L5-class-factories.md  drain-265-168-native-gate.md  drain-fase3-stdlib-order.md  drain-onda3-subcluster-A.md  e1-elf-linker-plan.md  embed-vfs.md  generic-stack-completion.md  (+31 more)
docs/memory/: teko-agent-team.md  teko-laws-digest.md  teko-mem-model-empirical.md  teko-ref-model-digest.md  teko-security-north.md
examples/project/: main.tks
examples/regression-fixture/: regression-fixture.tkp
extensions/vscode/: package.json
gen1/: teko  teko-tktest  teko-tktest.Info.plist  teko.tsym
gen3/: teko  teko.c  teko.tsym
packaging/homebrew/: teko.rb
runtime/: teko_rt.c  teko_rt.h
runtime/native/: run-native.sh  teko_rt.c  teko_rt.h  teko_rt_sched.c
runtime/wasm/: CLAUDE.md  README.md  package.json  run-alloc.mjs  run-aos.mjs  run-api.mjs  run-arrays-fail.mjs  run-arrays.mjs  run-broadcast.mjs  run-browser.mjs  run-class.mjs  run-comptime.mjs  run-concat.mjs  run-controlflow.mjs  run-convert.mjs  run-crypto.mjs  run-defer.mjs  run-delayed.mjs  run-duplex.mjs  run-eventbus.mjs  run-events-source.mjs  run-events.mjs  run-foreach.mjs  run-format.mjs  run-generics.mjs  run-hash.mjs  run-http.mjs  run-iarray-fail.mjs  run-iarray.mjs  run-interp.mjs  run-method-arg.mjs  run-net.mjs  run-node.mjs  run-optionals.mjs  run-parse.mjs  run-parsefloat.mjs  run-resilience.mjs  run-routines.mjs  run-safenav.mjs  run-shared.mjs  (+10 more)
scripts/: check_coff.sh  check_elf.sh  check_macho.sh  ci_cc_wrap.sh  ci_provision_teko.sh  cli_flags_test.sh  compile_fail_regressions.sh  cross_compile_linux.sh  crossmodule_regressions.sh  derive_version.sh  diff_c_own.sh  diff_vm_native.sh  fetch_teko.sh  fmt_cli_test.sh  install_share_runtime_test.sh  native_regressions.sh  package_release.sh  positive_regressions.sh  region_drop_subtree_test.c  region_drop_subtree_test.sh  tk_arena_commit_test.c  tk_arena_commit_test.sh  validate_wasm_own.sh
sdk/: flows.tks  fs.tks  lists.tks  logger.tks  marshall.tks  strings.tks  sync.tks
src/: CLAUDE.md  codegen_aot.c  codegen_aot.h  codegen_li.c  codegen_li.h  codegen_li_wasm.c  codegen_li_wasm.h  driver.c  driver.h  driver.tks  frontend_interop.c  lexer.c  lexer.h  lexer_string.c  lexer_string.h  main.c  parser.c  parser.h  parser_async_control.c  parser_async_control.h  parser_concurrent.c  parser_concurrent.h  parser_di.c  parser_di.h  parser_extensions.c  parser_extensions.h  parser_ffi.c  parser_ffi.h  parser_generics.h  parser_messaging.c  parser_messaging.h  parser_statements.c  parser_statements.h  parser_string.c  parser_string.h  parser_types.c  parser_types.h  parser_visibility.c  parser_visibility.h  project_manager.c  (+30 more)
src/assert/: assert.tks  assert_test.tkt
src/backend/: abi_aapcs64.tks  abi_riscv64.tks  abi_riscv64_test.tkt  abi_sysv64.tks  abi_sysv64_test.tkt  abi_win64.tks  abi_win64_test.tkt  encode_arm64.tks  encode_arm64_consts.tks  encode_arm64_test.tkt  encode_riscv.tks  encode_riscv_consts.tks  encode_riscv_test.tkt  (+39 more)
tests/: test_codegen_li.c  test_lexer_phase12.c  test_main.c  test_project.c  test_semantics.c  test_target.c  test_teko_il.c  test_tooling.c  test_type_checker.c  test_vm_arena.c  test_vm_concurrency.c  test_vm_core.c  test_vm_debug.c  test_vm_scheduler.c
tools/: gen_decimal_kats.py
(+1248 files in other folders)
